--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
     "name": "romanum",
     "private": true,
-    "version": "1.0.0",
+    "version": "1.1.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
         "preview": "vite preview",
-        "svelte-check": "svelte-check"
+        "prettier-check": "prettier --config .prettierrc 'src/' --write",
+        "svelte-check": "svelte-check --tsconfig ./tsconfig.json"
     },
     "devDependencies": {
         "@sveltejs/vite-plugin-svelte": "^2.4.2",
+        "@tsconfig/svelte": "^5.0.2",
+        "prettier": "^3.0.2",
         "svelte": "^4.0.5",
+        "svelte-check": "^3.5.0",
+        "tslib": "^2.6.2",
+        "typescript": "^5.1.6",
         "vite": "^4.4.5"
     }
 }
